[update] fix crash courses page

--- a/404.html
+++ b/404.html
@@ -5,9 +5,12 @@ permalink: /404.html
 ---
 
 <div class="text-center">
-  <h1>Whoops, this page doesn't exist.</h1>
-  <h1>Move along. (404 error)</h1>
+  <h2>Whoops, easy, this page is under development...</h1>
+  <h4>Try something else...</h3>
   <br/>
 
-  <img src="{{ 'assets/img/404-southpark.jpg' | relative_url }}" alt="Not found" />
+  <img src="{{ 'assets/img/milky_way.jpg' | relative_url }}" />
+  
+  <h4> Or... take your time, learn and enjoy Star Cluster Westerlund 2 in Nebula Gum 29 - taken by Hubble Space Telescope - NASA. Learn more about it <a href="https://www.nasa.gov/sites/default/files/atoms/files/23-nebulae-star-cluster-westerlund-2.pdf"> here </a>
+  </h3>
 </div>
