--- a/blog2/index.html
+++ b/blog2/index.html
@@ -2,4 +2,5 @@
 layout: home
 title: Mutation Testing Blog
 subtitle: Sharing is caring - discover publications, code, concerns, etc.
+category: mutation_testing_blog
 ---
