[update] update wip image size

--- a/202.html
+++ b/202.html
@@ -8,7 +8,7 @@ permalink: /202.html
   <h2>Whoops, easy, this page is under development... <img src="/assets/img/hard-work.png" height="30px" /></h1>
   <br/>
 
-  <img src="{{ 'assets/img/work-in-progress.png' | relative_url }}" />
+  <img src="{{ 'assets/img/work-in-progress.png' | relative_url }}" height="200px" width="200px"/>
 
   </h3>
 </div>
