[update] page not fauld

--- a/404.html
+++ b/404.html
@@ -6,11 +6,13 @@ permalink: /404.html
 
 <div class="text-center">
   <h2>Whoops, easy, this page is under development...</h1>
-  <h4>Try something else...</h3>
+  <h4>:point_up: Maybe learn something else...</h4>
   <br/>
 
   <img src="{{ 'assets/img/milky_way.jpg' | relative_url }}" />
   
-  <h4> Or... take your time, learn and enjoy Star Cluster Westerlund 2 in Nebula Gum 29 - taken by Hubble Space Telescope - NASA. Learn more about it <a href="https://www.nasa.gov/sites/default/files/atoms/files/23-nebulae-star-cluster-westerlund-2.pdf"> here </a>
+    <h4> Take your time and enjoy Star Cluster taken by Hubble Space Telescope - NASA (Westerlund 2 in Nebula Gum 29) </h4>
+
+    <h4> :information_desk_person: Learn more about it <a href="https://www.nasa.gov/sites/default/files/atoms/files/23-nebulae-star-cluster-westerlund-2.pdf"> here </a> </h4>
   </h3>
 </div>
