[update] change relative paths

--- a/202.html
+++ b/202.html
@@ -5,7 +5,7 @@ permalink: /202.html
 ---
 
 <div class="text-center">
-  <h2>Whoops, easy, this page is under development... <img src="/assets/img/hard-work.png" height="30px" /></h1>
+  <h2>Whoops, easy, this page is under development... <img src="assets/img/hard-work.png" height="30px" /></h1>
   <br/>
 
   <img src="{{ 'assets/img/work-in-progress.png' | relative_url }}" height="200px" width="200px"/>
